--- a/html.html
+++ b/html.html
@@ -12,6 +12,7 @@
       <span style="color: black; font-weight: lighter">Toto je stranka Tamira, zde se nachazi pouze odkaz na seznam. <span></p>
 
   <a href="http://seznam.cz">Tady je seznam</a>
+  <link rel="stylesheet" href="css/style.css"> 
 
   </body>
 </html>
